# vision-caption

./: .gitignore  README.md  app.py  colab_app.py  local_paths.example.json  local_run.py  pyproject.toml  train.py
notebooks/: demo.ipynb  train_colab.ipynb
src/vision_caption/: __init__.py  config.py  data.py  inference.py
src/vision_caption/models/: __init__.py  language_decoder.py  projector.py  vision_encoder.py  vlm.py
